--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "tsc:check": "tsc --noEmit",
     "format": "prettier --write .",
     "prepare": "husky"
   },
