--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "motion": "^12.0.0",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
