--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.77.2",
+    "@tanstack/react-query-devtools": "^5.77.2",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "motion": "^12.0.0",
