--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@tanstack/react-query": "^5.77.2",
     "@tanstack/react-query-devtools": "^5.77.2",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "jotai": "^2.12.5",
     "motion": "^12.0.0",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.5.2"
+    "react-hook-form": "^7.56.4",
+    "tailwind-merge": "^2.5.2",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^20",
