--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "jotai": "^2.12.5",
+    "lucide-react": "^0.511.0",
     "motion": "^12.0.0",
     "next": "14.2.11",
     "react": "^18",
