--- a/package.json
+++ b/package.json
@@ -13,18 +13,24 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@prisma/client": "^6.8.2",
     "@tanstack/react-query": "^5.77.2",
     "@tanstack/react-query-devtools": "^5.77.2",
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "jotai": "^2.12.5",
     "lucide-react": "^0.511.0",
     "motion": "^12.0.0",
     "next": "14.2.11",
+    "next-auth": "^4.24.11",
     "react": "^18",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^18",
     "react-hook-form": "^7.56.4",
+    "react-icons": "^5.5.0",
+    "sonner": "^2.0.4",
     "tailwind-merge": "^2.5.2",
     "yup": "^1.6.1"
   },
@@ -37,6 +43,7 @@
     "husky": "^9.1.7",
     "postcss": "^8",
     "prettier": "^3.3.3",
+    "prisma": "^6.8.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
