--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.511.0",
     "motion": "^12.0.0",
     "next": "14.2.11",
+    "prisma": "^6.9.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.56.4",
