--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@prisma/client": "^6.9.0",
     "@tanstack/react-query": "^5.77.2",
     "@tanstack/react-query-devtools": "^5.77.2",
     "axios": "^1.9.0",
@@ -22,6 +23,7 @@
     "lucide-react": "^0.511.0",
     "motion": "^12.0.0",
     "next": "14.2.11",
+    "prisma": "^6.9.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.56.4",
